compiler/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> goal
Rule 1     goal -> main_class class_list
Rule 2     class_list -> <empty>
Rule 3     class_list -> class class_list
Rule 4     main_class -> CLASS IDENTIFIER LEFT_BRACE PUBLIC STATIC VOID MAIN LEFT_PARENTHESIS STRING LEFT_BRACKET RIGHT_BRACKET IDENTIFIER RIGHT_PARENTHESIS LEFT_BRACE var_list statement_list RIGHT_BRACE RIGHT_BRACE
Rule 5     class -> CLASS IDENTIFIER extends LEFT_BRACE declaration_list RIGHT_BRACE
Rule 6     extends -> <empty>
Rule 7     extends -> EXTENDS IDENTIFIER
Rule 8     declaration_list -> <empty>
Rule 9     declaration_list -> field
Rule 10    declaration_list -> method
Rule 11    declaration_list -> declaration_list
Rule 12    field -> type IDENTIFIER SEMICOLON
Rule 13    method -> PUBLIC type IDENTIFIER LEFT_PARENTHESIS params_list RIGHT_PARENTHESIS LEFT_BRACE var_list statement_list RETURN expression SEMICOLON RIGHT_BRACE
Rule 14    params_list -> <empty>
Rule 15    params_list -> args_list
Rule 16    args_list -> arg
Rule 17    args_list -> arg COMMA args_list
Rule 18    arg -> type IDENTIFIER
Rule 19    var_list -> <empty>
Rule 20    var_list -> var var_list
Rule 21    var -> type IDENTIFIER SEMICOLON
Rule 22    var -> type IDENTIFIER ASSIGNMENT expression SEMICOLON
Rule 23    statement_list -> <empty>
Rule 24    statement_list -> statement statement_list
Rule 25    type -> array_type
Rule 26    type -> boolean_type
Rule 27    type -> int_type
Rule 28    type -> identifier_type
Rule 29    array_type -> type LEFT_BRACKET RIGHT_BRACKET
Rule 30    boolean_type -> BOOLEAN
Rule 31    int_type -> INT
Rule 32    identifier_type -> IDENTIFIER
Rule 33    statement -> block_statement
Rule 34    statement -> if_statement
Rule 35    statement -> while_statement
Rule 36    statement -> print_statement
Rule 37    statement -> assignment_statement
Rule 38    block_statement -> LEFT_BRACE statement_list RIGHT_BRACE
Rule 39    if_statement -> IF LEFT_PARENTHESIS expression RIGHT_PARENTHESIS statement ELSE statement
Rule 40    while_statement -> WHILE LEFT_PARENTHESIS expression RIGHT_PARENTHESIS statement
Rule 41    print_statement -> SYSTEM POINT OUT POINT PRINTLN LEFT_PARENTHESIS expression RIGHT_PARENTHESIS SEMICOLON
Rule 42    assignment_statement -> expression ASSIGNMENT expression SEMICOLON
Rule 43    expression -> array_element_expression
Rule 44    expression -> class_field_expression
Rule 45    expression -> class_method_expression
Rule 46    expression -> or_expression
Rule 47    expression -> and_expression
Rule 48    expression -> equal_expression
Rule 49    expression -> not_equal_expression
Rule 50    expression -> greater_expression
Rule 51    expression -> less_expression
Rule 52    expression -> plus_expression
Rule 53    expression -> minus_expression
Rule 54    expression -> multiply_expression
Rule 55    expression -> divide_expression
Rule 56    expression -> parenthesis_expression
Rule 57    expression -> unary_minus_expression
Rule 58    expression -> not_expression
Rule 59    expression -> new_expression
Rule 60    expression -> new_array_expression
Rule 61    expression -> identifier_expression
Rule 62    expression -> integer_literal_expression
Rule 63    expression -> true_expression
Rule 64    expression -> false_expression
Rule 65    expression -> this_expression
Rule 66    expression -> null_expression
Rule 67    array_element_expression -> expression LEFT_BRACKET expression RIGHT_BRACKET
Rule 68    class_field_expression -> expression POINT accessed_field
Rule 69    accessed_field -> IDENTIFIER
Rule 70    accessed_field -> IDENTIFIER POINT accessed_field
Rule 71    class_method_expression -> expression POINT IDENTIFIER LEFT_PARENTHESIS expression_list RIGHT_PARENTHESIS
Rule 72    expression_list -> expression
Rule 73    expression_list -> expression COMMA expression_list
Rule 74    or_expression -> expression OR expression
Rule 75    and_expression -> expression AND expression
Rule 76    equal_expression -> expression EQUAL expression
Rule 77    not_equal_expression -> expression NOT_EQUAL expression
Rule 78    greater_expression -> expression GREATER expression
Rule 79    less_expression -> expression LESS expression
Rule 80    plus_expression -> expression PLUS expression
Rule 81    minus_expression -> expression MINUS expression
Rule 82    multiply_expression -> expression MULTIPLY expression
Rule 83    divide_expression -> expression DIVIDE expression
Rule 84    parenthesis_expression -> LEFT_PARENTHESIS expression RIGHT_PARENTHESIS
Rule 85    unary_minus_expression -> MINUS expression
Rule 86    not_expression -> NOT expression
Rule 87    new_expression -> NEW type LEFT_PARENTHESIS RIGHT_PARENTHESIS
Rule 88    new_array_expression -> NEW type LEFT_BRACKET expression RIGHT_BRACKET brackets
Rule 89    brackets -> <empty>
Rule 90    brackets -> LEFT_BRACKET RIGHT_BRACKET brackets
Rule 91    identifier_expression -> IDENTIFIER
Rule 92    integer_literal_expression -> INTEGER_LITERAL
Rule 93    true_expression -> TRUE
Rule 94    false_expression -> FALSE
Rule 95    this_expression -> THIS
Rule 96    null_expression -> NULL

Terminals, with rules where they appear

AND                  : 75
ASSIGNMENT           : 22 42
BOOLEAN              : 30
CLASS                : 4 5
COMMA                : 17 73
DIVIDE               : 83
ELSE                 : 39
EQUAL                : 76
EXTENDS              : 7
FALSE                : 94
GREATER              : 78
IDENTIFIER           : 4 4 5 7 12 13 18 21 22 32 69 70 71 91
IF                   : 39
INT                  : 31
INTEGER_LITERAL      : 92
LEFT_BRACE           : 4 4 5 13 38
LEFT_BRACKET         : 4 29 67 88 90
LEFT_PARENTHESIS     : 4 13 39 40 41 71 84 87
LESS                 : 79
MAIN                 : 4
MINUS                : 81 85
MULTIPLY             : 82
NEW                  : 87 88
NOT                  : 86
NOT_EQUAL            : 77
NULL                 : 96
OR                   : 74
OUT                  : 41
PLUS                 : 80
POINT                : 41 41 68 70 71
PRINTLN              : 41
PUBLIC               : 4 13
RETURN               : 13
RIGHT_BRACE          : 4 4 5 13 38
RIGHT_BRACKET        : 4 29 67 88 90
RIGHT_PARENTHESIS    : 4 13 39 40 41 71 84 87
SEMICOLON            : 12 13 21 22 41 42
STATIC               : 4
STRING               : 4
SYSTEM               : 41
THIS                 : 95
TRUE                 : 93
VOID                 : 4
WHILE                : 40
error                : 

Nonterminals, with rules where they appear

accessed_field       : 68 70
and_expression       : 47
arg                  : 16 17
args_list            : 15 17
array_element_expression : 43
array_type           : 25
assignment_statement : 37
block_statement      : 33
boolean_type         : 26
brackets             : 88 90
class                : 3
class_field_expression : 44
class_list           : 1 3
class_method_expression : 45
declaration_list     : 5 11
divide_expression    : 55
equal_expression     : 48
expression           : 13 22 39 40 41 42 42 67 67 68 71 72 73 74 74 75 75 76 76 77 77 78 78 79 79 80 80 81 81 82 82 83 83 84 85 86 88
expression_list      : 71 73
extends              : 5
false_expression     : 64
field                : 9
goal                 : 0
greater_expression   : 50
identifier_expression : 61
identifier_type      : 28
if_statement         : 34
int_type             : 27
integer_literal_expression : 62
less_expression      : 51
main_class           : 1
method               : 10
minus_expression     : 53
multiply_expression  : 54
new_array_expression : 60
new_expression       : 59
not_equal_expression : 49
not_expression       : 58
null_expression      : 66
or_expression        : 46
params_list          : 13
parenthesis_expression : 56
plus_expression      : 52
print_statement      : 36
statement            : 24 39 39 40
statement_list       : 4 13 24 38
this_expression      : 65
true_expression      : 63
type                 : 12 13 18 21 22 29 87 88
unary_minus_expression : 57
var                  : 20
var_list             : 4 13 20
while_statement      : 35

Parsing method: LALR

state 0

    (0) S' -> . goal
    (1) goal -> . main_class class_list
    (4) main_class -> . CLASS IDENTIFIER LEFT_BRACE PUBLIC STATIC VOID MAIN LEFT_PARENTHESIS STRING LEFT_BRACKET RIGHT_BRACKET IDENTIFIER RIGHT_PARENTHESIS LEFT_BRACE var_list statement_list RIGHT_BRACE RIGHT_BRACE

    CLASS           shift and go to state 3

    main_class                     shift and go to state 2
    goal                           shift and go to state 1

state 1

    (0) S' -> goal .



state 2

    (1) goal -> main_class . class_list
    (2) class_list -> .
    (3) class_list -> . class class_list
    (5) class -> . CLASS IDENTIFIER extends LEFT_BRACE declaration_list RIGHT_BRACE

    $end            reduce using rule 2 (class_list -> .)
    CLASS           shift and go to state 4

    class_list                     shift and go to state 5
    class                          shift and go to state 6

state 3

    (4) main_class -> CLASS . IDENTIFIER LEFT_BRACE PUBLIC STATIC VOID MAIN LEFT_PARENTHESIS STRING LEFT_BRACKET RIGHT_BRACKET IDENTIFIER RIGHT_PARENTHESIS LEFT_BRACE var_list statement_list RIGHT_BRACE RIGHT_BRACE

    IDENTIFIER      shift and go to state 7


state 4

    (5) class -> CLASS . IDENTIFIER extends LEFT_BRACE declaration_list RIGHT_BRACE

    IDENTIFIER      shift and go to state 8


state 5

    (1) goal -> main_class class_list .

    $end            reduce using rule 1 (goal -> main_class class_list .)


state 6

    (3) class_list -> class . class_list
    (2) class_list -> .
    (3) class_list -> . class class_list
    (5) class -> . CLASS IDENTIFIER extends LEFT_BRACE declaration_list RIGHT_BRACE

    $end            reduce using rule 2 (class_list -> .)
    CLASS           shift and go to state 4

    class_list                     shift and go to state 9
    class                          shift and go to state 6

state 7

    (4) main_class -> CLASS IDENTIFIER . LEFT_BRACE PUBLIC STATIC VOID MAIN LEFT_PARENTHESIS STRING LEFT_BRACKET RIGHT_BRACKET IDENTIFIER RIGHT_PARENTHESIS LEFT_BRACE var_list statement_list RIGHT_BRACE RIGHT_BRACE

    LEFT_BRACE      shift and go to state 10


state 8

    (5) class -> CLASS IDENTIFIER . extends LEFT_BRACE declaration_list RIGHT_BRACE
    (6) extends -> .
    (7) extends -> . EXTENDS IDENTIFIER

    LEFT_BRACE      reduce using rule 6 (extends -> .)
    EXTENDS         shift and go to state 12

    extends                        shift and go to state 11

state 9

    (3) class_list -> class class_list .

    $end            reduce using rule 3 (class_list -> class class_list .)


state 10

    (4) main_class -> CLASS IDENTIFIER LEFT_BRACE . PUBLIC STATIC VOID MAIN LEFT_PARENTHESIS STRING LEFT_BRACKET RIGHT_BRACKET IDENTIFIER RIGHT_PARENTHESIS LEFT_BRACE var_list statement_list RIGHT_BRACE RIGHT_BRACE

    PUBLIC          shift and go to state 13


state 11

    (5) class -> CLASS IDENTIFIER extends . LEFT_BRACE declaration_list RIGHT_BRACE

    LEFT_BRACE      shift and go to state 14


state 12

    (7) extends -> EXTENDS . IDENTIFIER

    IDENTIFIER      shift and go to state 15


state 13

    (4) main_class -> CLASS IDENTIFIER LEFT_BRACE PUBLIC . STATIC VOID MAIN LEFT_PARENTHESIS STRING LEFT_BRACKET RIGHT_BRACKET IDENTIFIER RIGHT_PARENTHESIS LEFT_BRACE var_list statement_list RIGHT_BRACE RIGHT_BRACE

    STATIC          shift and go to state 16


state 14

    (5) class -> CLASS IDENTIFIER extends LEFT_BRACE . declaration_list RIGHT_BRACE
    (8) declaration_list -> .
    (9) declaration_list -> . field
    (10) declaration_list -> . method
    (11) declaration_list -> . declaration_list
    (12) field -> . type IDENTIFIER SEMICOLON
    (13) method -> . PUBLIC type IDENTIFIER LEFT_PARENTHESIS params_list RIGHT_PARENTHESIS LEFT_BRACE var_list statement_list RETURN expression SEMICOLON RIGHT_BRACE
    (25) type -> . array_type
    (26) type -> . boolean_type
    (27) type -> . int_type
    (28) type -> . identifier_type
    (29) array_type -> . type LEFT_BRACKET RIGHT_BRACKET
    (30) boolean_type -> . BOOLEAN
    (31) int_type -> . INT
    (32) identifier_type -> . IDENTIFIER

    RIGHT_BRACE     reduce using rule 8 (declaration_list -> .)
    PUBLIC          shift and go to state 28
    BOOLEAN         shift and go to state 27
    INT             shift and go to state 24
    IDENTIFIER      shift and go to state 19

    boolean_type                   shift and go to state 22
    identifier_type                shift and go to state 25
    array_type                     shift and go to state 23
    declaration_list               shift and go to state 26
    field                          shift and go to state 17
    int_type                       shift and go to state 18
    type                           shift and go to state 20
    method                         shift and go to state 21

state 15

    (7) extends -> EXTENDS IDENTIFIER .

    LEFT_BRACE      reduce using rule 7 (extends -> EXTENDS IDENTIFIER .)


state 16

    (4) main_class -> CLASS IDENTIFIER LEFT_BRACE PUBLIC STATIC . VOID MAIN LEFT_PARENTHESIS STRING LEFT_BRACKET RIGHT_BRACKET IDENTIFIER RIGHT_PARENTHESIS LEFT_BRACE var_list statement_list RIGHT_BRACE RIGHT_BRACE

    VOID            shift and go to state 29


state 17

    (9) declaration_list -> field .

    RIGHT_BRACE     reduce using rule 9 (declaration_list -> field .)


state 18

    (27) type -> int_type .

    IDENTIFIER      reduce using rule 27 (type -> int_type .)
    LEFT_BRACKET    reduce using rule 27 (type -> int_type .)
    LEFT_PARENTHESIS reduce using rule 27 (type -> int_type .)


state 19

    (32) identifier_type -> IDENTIFIER .

    IDENTIFIER      reduce using rule 32 (identifier_type -> IDENTIFIER .)
    LEFT_BRACKET    reduce using rule 32 (identifier_type -> IDENTIFIER .)
    LEFT_PARENTHESIS reduce using rule 32 (identifier_type -> IDENTIFIER .)


state 20

    (12) field -> type . IDENTIFIER SEMICOLON
    (29) array_type -> type . LEFT_BRACKET RIGHT_BRACKET

    IDENTIFIER      shift and go to state 31
    LEFT_BRACKET    shift and go to state 30


state 21

    (10) declaration_list -> method .

    RIGHT_BRACE     reduce using rule 10 (declaration_list -> method .)


state 22

    (26) type -> boolean_type .

    IDENTIFIER      reduce using rule 26 (type -> boolean_type .)
    LEFT_BRACKET    reduce using rule 26 (type -> boolean_type .)
    LEFT_PARENTHESIS reduce using rule 26 (type -> boolean_type .)


state 23

    (25) type -> array_type .

    IDENTIFIER      reduce using rule 25 (type -> array_type .)
    LEFT_BRACKET    reduce using rule 25 (type -> array_type .)
    LEFT_PARENTHESIS reduce using rule 25 (type -> array_type .)


state 24

    (31) int_type -> INT .

    IDENTIFIER      reduce using rule 31 (int_type -> INT .)
    LEFT_BRACKET    reduce using rule 31 (int_type -> INT .)
    LEFT_PARENTHESIS reduce using rule 31 (int_type -> INT .)


state 25

    (28) type -> identifier_type .

    IDENTIFIER      reduce using rule 28 (type -> identifier_type .)
    LEFT_BRACKET    reduce using rule 28 (type -> identifier_type .)
    LEFT_PARENTHESIS reduce using rule 28 (type -> identifier_type .)


state 26

    (5) class -> CLASS IDENTIFIER extends LEFT_BRACE declaration_list . RIGHT_BRACE
    (11) declaration_list -> declaration_list .

  ! shift/reduce conflict for RIGHT_BRACE resolved as shift
    RIGHT_BRACE     shift and go to state 32

  ! RIGHT_BRACE     [ reduce using rule 11 (declaration_list -> declaration_list .) ]


state 27

    (30) boolean_type -> BOOLEAN .

    IDENTIFIER      reduce using rule 30 (boolean_type -> BOOLEAN .)
    LEFT_BRACKET    reduce using rule 30 (boolean_type -> BOOLEAN .)
    LEFT_PARENTHESIS reduce using rule 30 (boolean_type -> BOOLEAN .)


state 28

    (13) method -> PUBLIC . type IDENTIFIER LEFT_PARENTHESIS params_list RIGHT_PARENTHESIS LEFT_BRACE var_list statement_list RETURN expression SEMICOLON RIGHT_BRACE
    (25) type -> . array_type
    (26) type -> . boolean_type
    (27) type -> . int_type
    (28) type -> . identifier_type
    (29) array_type -> . type LEFT_BRACKET RIGHT_BRACKET
    (30) boolean_type -> . BOOLEAN
    (31) int_type -> . INT
    (32) identifier_type -> . IDENTIFIER

    BOOLEAN         shift and go to state 27
    INT             shift and go to state 24
    IDENTIFIER      shift and go to state 19

    boolean_type                   shift and go to state 22
    type                           shift and go to state 33
    identifier_type                shift and go to state 25
    array_type                     shift and go to state 23
    int_type                       shift and go to state 18

state 29

    (4) main_class -> CLASS IDENTIFIER LEFT_BRACE PUBLIC STATIC VOID . MAIN LEFT_PARENTHESIS STRING LEFT_BRACKET RIGHT_BRACKET IDENTIFIER RIGHT_PARENTHESIS LEFT_BRACE var_list statement_list RIGHT_BRACE RIGHT_BRACE

    MAIN            shift and go to state 34


state 30

    (29) array_type -> type LEFT_BRACKET . RIGHT_BRACKET

    RIGHT_BRACKET   shift and go to state 35


state 31

    (12) field -> type IDENTIFIER . SEMICOLON

    SEMICOLON       shift and go to state 36


state 32

    (5) class -> CLASS IDENTIFIER extends LEFT_BRACE declaration_list RIGHT_BRACE .

    CLASS           reduce using rule 5 (class -> CLASS IDENTIFIER extends LEFT_BRACE declaration_list RIGHT_BRACE .)
    $end            reduce using rule 5 (class -> CLASS IDENTIFIER extends LEFT_BRACE declaration_list RIGHT_BRACE .)


state 33

    (13) method -> PUBLIC type . IDENTIFIER LEFT_PARENTHESIS params_list RIGHT_PARENTHESIS LEFT_BRACE var_list statement_list RETURN expression SEMICOLON RIGHT_BRACE
    (29) array_type -> type . LEFT_BRACKET RIGHT_BRACKET

    IDENTIFIER      shift and go to state 37
    LEFT_BRACKET    shift and go to state 30


state 34

    (4) main_class -> CLASS IDENTIFIER LEFT_BRACE PUBLIC STATIC VOID MAIN . LEFT_PARENTHESIS STRING LEFT_BRACKET RIGHT_BRACKET IDENTIFIER RIGHT_PARENTHESIS LEFT_BRACE var_list statement_list RIGHT_BRACE RIGHT_BRACE

    LEFT_PARENTHESIS shift and go to state 38


state 35

    (29) array_type -> type LEFT_BRACKET RIGHT_BRACKET .

    IDENTIFIER      reduce using rule 29 (array_type -> type LEFT_BRACKET RIGHT_BRACKET .)
    LEFT_BRACKET    reduce using rule 29 (array_type -> type LEFT_BRACKET RIGHT_BRACKET .)
    LEFT_PARENTHESIS reduce using rule 29 (array_type -> type LEFT_BRACKET RIGHT_BRACKET .)


state 36

    (12) field -> type IDENTIFIER SEMICOLON .

    RIGHT_BRACE     reduce using rule 12 (field -> type IDENTIFIER SEMICOLON .)


state 37

    (13) method -> PUBLIC type IDENTIFIER . LEFT_PARENTHESIS params_list RIGHT_PARENTHESIS LEFT_BRACE var_list statement_list RETURN expression SEMICOLON RIGHT_BRACE

    LEFT_PARENTHESIS shift and go to state 39


state 38

    (4) main_class -> CLASS IDENTIFIER LEFT_BRACE PUBLIC STATIC VOID MAIN LEFT_PARENTHESIS . STRING LEFT_BRACKET RIGHT_BRACKET IDENTIFIER RIGHT_PARENTHESIS LEFT_BRACE var_list statement_list RIGHT_BRACE RIGHT_BRACE

    STRING          shift and go to state 40


state 39

    (13) method -> PUBLIC type IDENTIFIER LEFT_PARENTHESIS . params_list RIGHT_PARENTHESIS LEFT_BRACE var_list statement_list RETURN expression SEMICOLON RIGHT_BRACE
    (14) params_list -> .
    (15) params_list -> . args_list
    (16) args_list -> . arg
    (17) args_list -> . arg COMMA args_list
    (18) arg -> . type IDENTIFIER
    (25) type -> . array_type
    (26) type -> . boolean_type
    (27) type -> . int_type
    (28) type -> . identifier_type
    (29) array_type -> . type LEFT_BRACKET RIGHT_BRACKET
    (30) boolean_type -> . BOOLEAN
    (31) int_type -> . INT
    (32) identifier_type -> . IDENTIFIER

    RIGHT_PARENTHESIS reduce using rule 14 (params_list -> .)
    BOOLEAN         shift and go to state 27
    INT             shift and go to state 24
    IDENTIFIER      shift and go to state 19

    boolean_type                   shift and go to state 22
    type                           shift and go to state 42
    identifier_type                shift and go to state 25
    args_list                      shift and go to state 43
    array_type                     shift and go to state 23
    int_type                       shift and go to state 18
    arg                            shift and go to state 41
    params_list                    shift and go to state 44

state 40

    (4) main_class -> CLASS IDENTIFIER LEFT_BRACE PUBLIC STATIC VOID MAIN LEFT_PARENTHESIS STRING . LEFT_BRACKET RIGHT_BRACKET IDENTIFIER RIGHT_PARENTHESIS LEFT_BRACE var_list statement_list RIGHT_BRACE RIGHT_BRACE

    LEFT_BRACKET    shift and go to state 45


state 41

    (16) args_list -> arg .
    (17) args_list -> arg . COMMA args_list

    RIGHT_PARENTHESIS reduce using rule 16 (args_list -> arg .)
    COMMA           shift and go to state 46


state 42

    (18) arg -> type . IDENTIFIER
    (29) array_type -> type . LEFT_BRACKET RIGHT_BRACKET

    IDENTIFIER      shift and go to state 47
    LEFT_BRACKET    shift and go to state 30


state 43

    (15) params_list -> args_list .

    RIGHT_PARENTHESIS reduce using rule 15 (params_list -> args_list .)


state 44

    (13) method -> PUBLIC type IDENTIFIER LEFT_PARENTHESIS params_list . RIGHT_PARENTHESIS LEFT_BRACE var_list statement_list RETURN expression SEMICOLON RIGHT_BRACE

    RIGHT_PARENTHESIS shift and go to state 48


state 45

    (4) main_class -> CLASS IDENTIFIER LEFT_BRACE PUBLIC STATIC VOID MAIN LEFT_PARENTHESIS STRING LEFT_BRACKET . RIGHT_BRACKET IDENTIFIER RIGHT_PARENTHESIS LEFT_BRACE var_list statement_list RIGHT_BRACE RIGHT_BRACE

    RIGHT_BRACKET   shift and go to state 49


state 46

    (17) args_list -> arg COMMA . args_list
    (16) args_list -> . arg
    (17) args_list -> . arg COMMA args_list
    (18) arg -> . type IDENTIFIER
    (25) type -> . array_type
    (26) type -> . boolean_type
    (27) type -> . int_type
    (28) type -> . identifier_type
    (29) array_type -> . type LEFT_BRACKET RIGHT_BRACKET
    (30) boolean_type -> . BOOLEAN
    (31) int_type -> . INT
    (32) identifier_type -> . IDENTIFIER

    BOOLEAN         shift and go to state 27
    INT             shift and go to state 24
    IDENTIFIER      shift and go to state 19

    boolean_type                   shift and go to state 22
    identifier_type                shift and go to state 25
    args_list                      shift and go to state 50
    int_type                       shift and go to state 18
    arg                            shift and go to state 41
    array_type                     shift and go to state 23
    type                           shift and go to state 42

state 47

    (18) arg -> type IDENTIFIER .

    COMMA           reduce using rule 18 (arg -> type IDENTIFIER .)
    RIGHT_PARENTHESIS reduce using rule 18 (arg -> type IDENTIFIER .)


state 48

    (13) method -> PUBLIC type IDENTIFIER LEFT_PARENTHESIS params_list RIGHT_PARENTHESIS . LEFT_BRACE var_list statement_list RETURN expression SEMICOLON RIGHT_BRACE

    LEFT_BRACE      shift and go to state 51


state 49

    (4) main_class -> CLASS IDENTIFIER LEFT_BRACE PUBLIC STATIC VOID MAIN LEFT_PARENTHESIS STRING LEFT_BRACKET RIGHT_BRACKET . IDENTIFIER RIGHT_PARENTHESIS LEFT_BRACE var_list statement_list RIGHT_BRACE RIGHT_BRACE

    IDENTIFIER      shift and go to state 52


state 50

    (17) args_list -> arg COMMA args_list .

    RIGHT_PARENTHESIS reduce using rule 17 (args_list -> arg COMMA args_list .)


state 51

    (13) method -> PUBLIC type IDENTIFIER LEFT_PARENTHESIS params_list RIGHT_PARENTHESIS LEFT_BRACE . var_list statement_list RETURN expression SEMICOLON RIGHT_BRACE
    (19) var_list -> .
    (20) var_list -> . var var_list
    (21) var -> . type IDENTIFIER SEMICOLON
    (22) var -> . type IDENTIFIER ASSIGNMENT expression SEMICOLON
    (25) type -> . array_type
    (26) type -> . boolean_type
    (27) type -> . int_type
    (28) type -> . identifier_type
    (29) array_type -> . type LEFT_BRACKET RIGHT_BRACKET
    (30) boolean_type -> . BOOLEAN
    (31) int_type -> . INT
    (32) identifier_type -> . IDENTIFIER

  ! shift/reduce conflict for IDENTIFIER resolved as shift
    LEFT_BRACE      reduce using rule 19 (var_list -> .)
    IF              reduce using rule 19 (var_list -> .)
    WHILE           reduce using rule 19 (var_list -> .)
    SYSTEM          reduce using rule 19 (var_list -> .)
    LEFT_PARENTHESIS reduce using rule 19 (var_list -> .)
    MINUS           reduce using rule 19 (var_list -> .)
    NOT             reduce using rule 19 (var_list -> .)
    NEW             reduce using rule 19 (var_list -> .)
    INTEGER_LITERAL reduce using rule 19 (var_list -> .)
    TRUE            reduce using rule 19 (var_list -> .)
    FALSE           reduce using rule 19 (var_list -> .)
    THIS            reduce using rule 19 (var_list -> .)
    NULL            reduce using rule 19 (var_list -> .)
    RETURN          reduce using rule 19 (var_list -> .)
    BOOLEAN         shift and go to state 27
    INT             shift and go to state 24
    IDENTIFIER      shift and go to state 19

  ! IDENTIFIER      [ reduce using rule 19 (var_list -> .) ]

    boolean_type                   shift and go to state 22
    type                           shift and go to state 55
    identifier_type                shift and go to state 25
    array_type                     shift and go to state 23
    var                            shift and go to state 54
    int_type                       shift and go to state 18
    var_list                       shift and go to state 53

state 52

    (4) main_class -> CLASS IDENTIFIER LEFT_BRACE PUBLIC STATIC VOID MAIN LEFT_PARENTHESIS STRING LEFT_BRACKET RIGHT_BRACKET IDENTIFIER . RIGHT_PARENTHESIS LEFT_BRACE var_list statement_list RIGHT_BRACE RIGHT_BRACE

    RIGHT_PARENTHESIS shift and go to state 56


state 53

    (13) method -> PUBLIC type IDENTIFIER LEFT_PARENTHESIS params_list RIGHT_PARENTHESIS LEFT_BRACE var_list . statement_list RETURN expression SEMICOLON RIGHT_BRACE
    (23) statement_list -> .
    (24) statement_list -> . statement statement_list
    (33) statement -> . block_statement
    (34) statement -> . if_statement
    (35) statement -> . while_statement
    (36) statement -> . print_statement
    (37) statement -> . assignment_statement
    (38) block_statement -> . LEFT_BRACE statement_list RIGHT_BRACE
    (39) if_statement -> . IF LEFT_PARENTHESIS expression RIGHT_PARENTHESIS statement ELSE statement
    (40) while_statement -> . WHILE LEFT_PARENTHESIS expression RIGHT_PARENTHESIS statement
    (41) print_statement -> . SYSTEM POINT OUT POINT PRINTLN LEFT_PARENTHESIS expression RIGHT_PARENTHESIS SEMICOLON
    (42) assignment_statement -> . expression ASSIGNMENT expression SEMICOLON
    (43) expression -> . array_element_expression
    (44) expression -> . class_field_expression
    (45) expression -> . class_method_expression
    (46) expression -> . or_expression
    (47) expression -> . and_expression
    (48) expression -> . equal_expression
    (49) expression -> . not_equal_expression
    (50) expression -> . greater_expression
    (51) expression -> . less_expression
    (52) expression -> . plus_expression
    (53) expression -> . minus_expression
    (54) expression -> . multiply_expression
    (55) expression -> . divide_expression
    (56) expression -> . parenthesis_expression
    (57) expression -> . unary_minus_expression
    (58) expression -> . not_expression
    (59) expression -> . new_expression
    (60) expression -> . new_array_expression
    (61) expression -> . identifier_expression
    (62) expression -> . integer_literal_expression
    (63) expression -> . true_expression
    (64) expression -> . false_expression
    (65) expression -> . this_expression
    (66) expression -> . null_expression
    (67) array_element_expression -> . expression LEFT_BRACKET expression RIGHT_BRACKET
    (68) class_field_expression -> . expression POINT accessed_field
    (71) class_method_expression -> . expression POINT IDENTIFIER LEFT_PARENTHESIS expression_list RIGHT_PARENTHESIS
    (74) or_expression -> . expression OR expression
    (75) and_expression -> . expression AND expression
    (76) equal_expression -> . expression EQUAL expression
    (77) not_equal_expression -> . expression NOT_EQUAL expression
    (78) greater_expression -> . expression GREATER expression
    (79) less_expression -> . expression LESS expression
    (80) plus_expression -> . expression PLUS expression
    (81) minus_expression -> . expression MINUS expression
    (82) multiply_expression -> . expression MULTIPLY expression
    (83) divide_expression -> . expression DIVIDE expression
    (84) parenthesis_expression -> . LEFT_PARENTHESIS expression RIGHT_PARENTHESIS
    (85) unary_minus_expression -> . MINUS expression
    (86) not_expression -> . NOT expression
    (87) new_expression -> . NEW type LEFT_PARENTHESIS RIGHT_PARENTHESIS
    (88) new_array_expression -> . NEW type LEFT_BRACKET expression RIGHT_BRACKET brackets
    (91) identifier_expression -> . IDENTIFIER
    (92) integer_literal_expression -> . INTEGER_LITERAL
    (93) true_expression -> . TRUE
    (94) false_expression -> . FALSE
    (95) this_expression -> . THIS
    (96) null_expression -> . NULL

    RETURN          reduce using rule 23 (statement_list -> .)
    LEFT_BRACE      shift and go to state 62
    IF              shift and go to state 90
    WHILE           shift and go to state 61
    SYSTEM          shift and go to state 97
    LEFT_PARENTHESIS shift and go to state 82
    MINUS           shift and go to state 68
    NOT             shift and go to state 86
    NEW             shift and go to state 72
    IDENTIFIER      shift and go to state 92
    INTEGER_LITERAL shift and go to state 85
    TRUE            shift and go to state 67
    FALSE           shift and go to state 93
    THIS            shift and go to state 95
    NULL            shift and go to state 66

    divide_expression              shift and go to state 57
    true_expression                shift and go to state 58
    identifier_expression          shift and go to state 59
    greater_expression             shift and go to state 60
    integer_literal_expression     shift and go to state 102
    class_method_expression        shift and go to state 63
    print_statement                shift and go to state 64
    new_expression                 shift and go to state 65
    and_expression                 shift and go to state 69
    less_expression                shift and go to state 70
    parenthesis_expression         shift and go to state 71
    assignment_statement           shift and go to state 73
    block_statement                shift and go to state 74
    array_element_expression       shift and go to state 75
    while_statement                shift and go to state 76
    this_expression                shift and go to state 77
    statement                      shift and go to state 78
    class_field_expression         shift and go to state 79
    if_statement                   shift and go to state 80
    new_array_expression           shift and go to state 81
    plus_expression                shift and go to state 99
    multiply_expression            shift and go to state 83
    null_expression                shift and go to state 84
    unary_minus_expression         shift and go to state 89
    false_expression               shift and go to state 87
    equal_expression               shift and go to state 88
    or_expression                  shift and go to state 91
    not_expression                 shift and go to state 94
    minus_expression               shift and go to state 96
    not_equal_expression           shift and go to state 98
    statement_list                 shift and go to state 100
    expression                     shift and go to state 101

state 54

    (20) var_list -> var . var_list
    (19) var_list -> .
    (20) var_list -> . var var_list
    (21) var -> . type IDENTIFIER SEMICOLON
    (22) var -> . type IDENTIFIER ASSIGNMENT expression SEMICOLON
    (25) type -> . array_type
    (26) type -> . boolean_type
    (27) type -> . int_type
    (28) type -> . identifier_type
    (29) array_type -> . type LEFT_BRACKET RIGHT_BRACKET
    (30) boolean_type -> . BOOLEAN
    (31) int_type -> . INT
    (32) identifier_type -> . IDENTIFIER
